# uwrt_training

./: CMakeLists.txt  package.xml
action/: Move.action
include/my_components/: clear_component.hpp  distance_component.hpp  listener_component.hpp  move_components.hpp  moverobot_component.hpp  publisher_component.hpp  reset_component.hpp  spawn_component.hpp
include/uwrt_training/: clear_component.hpp  distance_component.hpp  move_component.hpp  publisher_component.hpp  reset_component.hpp  spawn_component.hpp
launch/: launch.launch.py
src/: clear_component.cpp  distance_component.cpp  listener_component.cpp  move_component.cpp  moverobot_component.cpp  publisher_component.cpp  reset_component.cpp  spawn_component.cpp
srv/: ResetMessage.srv
